--- a/CRUD/MainWindow.xaml
+++ b/CRUD/MainWindow.xaml
@@ -24,7 +24,7 @@
                     <ColumnDefinition Width="12*"/>
                 </Grid.ColumnDefinitions>
                 <Label Content="Current Products" FontSize="25" Grid.Column="1" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Grid.ColumnSpan="2"/>
-                <DataGrid x:Name="ProductsGridView" FontSize="20" IsReadOnly="True" Grid.Column="1" Margin="10,1,10,10" Grid.Row="1" Grid.ColumnSpan="2" SelectionChanged="ProductsGridView_SelectionChanged"/>
+                <DataGrid x:Name="ProductsGridView" FontSize="20" IsReadOnly="True"  Grid.Column="2" Margin="127,28,222,10" Grid.Row="1" SelectionChanged="ProductsGridView_SelectionChanged"/>
 
 
                 <Grid Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2">
